fix: Reply form not aligned with thread anymore
part of story #29240 reply to pull request comment

Introduced by git #tuleap/stable/10a71734c6aeeba92f5561f78c9193f1cf7f87cf

The size of avatars has been changed, but the margin left of the form
has been left unmodified, resulting to the misalignment of the form and
the comments thread

Moreover, there was a deprecation notice regarding a computation in the
styles. It should be fixed now.

```
Deprecation Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div($tlp-avatar-width, 2) or calc($tlp-avatar-width / 2)

More info and automated migrator: https://sass-lang.com/d/slash-div

../../themes/includes/_tuleap-pullrequest-comment.scss 189:24  @use
../../themes/pull-requests.scss 31:1                           root stylesheet
```

How to test:
- Add a comment
- Add a reply
- Toggle the reply form
--> The form is aligned with the thread

--- a/plugins/pullrequest/themes/includes/_tuleap-pullrequest-comment.scss
+++ b/plugins/pullrequest/themes/includes/_tuleap-pullrequest-comment.scss
@@ -19,6 +19,8 @@
 
 $arrow-width: 6px;
 $follow-up-base-margin-left: 40px;
+$tlp-avatar-width: 32px;
+$thread-border-width: 2px;
 
 .pull-request-comment-component {
     display: flex;
@@ -161,7 +163,10 @@ $follow-up-base-margin-left: 40px;
 }
 
 .pull-request-comment-reply-form {
-    margin: 0 0 0 $follow-up-base-margin-left;
+    $half-avatar-width: calc($tlp-avatar-width / 2);
+    $half-thread-border-width: calc($thread-border-width / 2);
+
+    margin: 0 0 0 calc($follow-up-base-margin-left + $half-avatar-width + $half-thread-border-width);
 }
 
 .pull-request-comment-follow-up-content {
@@ -181,13 +186,11 @@ $follow-up-base-margin-left: 40px;
 }
 
 .pull-request-comment-follow-up {
-    $tlp-avatar-width: 32px;
-
     margin: 0 0 0 calc($follow-up-base-margin-left + $tlp-avatar-width);
-    border-left: 2px solid var(--tlp-neutral-normal-color);
+    border-left: $thread-border-width solid var(--tlp-neutral-normal-color);
 
     > .pull-request-comment-follow-up-content {
-        $left-offset: ($tlp-avatar-width / 2) + 1;
+        $left-offset: calc($tlp-avatar-width / 2) + calc($thread-border-width / 2);
 
         position: relative;
         left: -$left-offset;
